--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,5 +7,4 @@ deploy-job:
     - main
   script:
     - echo "New commit on the app detected, triggering docker pipeline"
-  trigger:
-    project: mietrecht/mietrecht-ch-backend
+    - "curl -X POST -F token=$ERPNEXT_DOCKER_PUBLISH_TRIGGER_TOKEN -F ref=REF_NAME https://gitlab.liip.ch/api/v4/projects/2781/trigger/pipeline"
