--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,4 +10,4 @@ deploy-job:
     - develop
   script:
     - echo "New commit on the app detected, triggering docker pipeline"
-    - "curl -X POST -F token=$ERPNEXT_DOCKER_PUBLISH_TRIGGER_TOKEN -F ref=REF_NAME https://gitlab.liip.ch/api/v4/projects/2781/trigger/pipeline"
+    - "curl -X POST -F token=$ERPNEXT_DOCKER_PUBLISH_TRIGGER_TOKEN -F ref=develop https://gitlab.liip.ch/api/v4/projects/2781/trigger/pipeline"
