MIET-245: Update CI trigger

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,11 @@ deploy-job:
     - docker-nonswiss-ok
   only:
     - develop
+    - ebook
   script:
     - echo "New commit on the app detected, triggering docker pipeline"
     - "curl -X POST \
      -F token=$ERPNEXT_DOCKER_PUBLISH_TRIGGER_TOKEN \
      -F 'variables[backend_version]='$APP_VERSION.$CI_COMMIT_SHORT_SHA \
+     -F 'variables[backend_branch]=$CI_COMMIT_BRANCH' \
      -F ref=develop https://gitlab.liip.ch/api/v4/projects/2781/trigger/pipeline"
